# bookstore-restapi

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  python-anywhere-deploy.yml  workflow-pr.yml
bookstore/: asgi.py  settings.py  urls.py  views.py  wsgi.py
bookstore/templates/: hello_world.html
order/: admin.py  factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
