[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Rodrigo Santos <rssantos07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.19"
djangorestframework = "^3.15.1"
django-extensions = "^3.1.3"
#django-debug-toolbar = "^3.2.2"
debug="false"
psycopg2-binary = "^2.9.9"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
gitpython = "^3.1.41"

[tool.poetry.dev-dependencies]
pytest = "^8.0.2"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"